# ai-stm-environment

./: .gitignore  README.md  environment.base.yml  environment.gpu.yml  environment.yml  pyproject.toml  requirements.txt
assessment/scripts/: validate_cnn_pipeline.py
setup/: check.py  conda.md  cuda.md  ubuntu.md
verify/: verify_cuda.py
